--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "build": "webpack -p",
-    "build:dev": "webpack",
+    "build:dev": "webpack --mode development",
     "watch": "webpack -p --progress --color --watch",
     "watch:dev": "webpack --progress --color --watch",
     "prezip": "npm run build",
@@ -20,7 +20,7 @@
   "author": "Jordi Aguilar",
   "license": "MIT",
   "dependencies": {
-    "newrelic-video-core": "git+https://github.com/newrelic/video-core-js.git#v0.9.1"
+    "newrelic-video-core": "git+https://github.com/newrelic/video-core-js.git"
   },
   "devDependencies": {
     "aws-sdk": "^2.157.0",
@@ -28,6 +28,7 @@
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "videojs-ima": "^0.6.0",
-    "webpack": "^3.4.1"
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   }
 }
