--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   "license": "MIT",
   "dependencies": {
     "codem-isoboxer": "^0.3.10",
-    "newrelic-video-core": "git+https://github.com/newrelic/video-core-js.git"
+    "newrelic-video-core": "github:newrelic/video-core-js#develop"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.24.8",
     "@babel/preset-env": "^7.0.0",
     "aws-sdk": "^2.920.0",
-    "babel-loader": "^8.0.0",
     "babel-jest": "^29.7.0",
+    "babel-loader": "^8.0.0",
     "jest": "^29.7.0",
     "videojs-ima": "^0.6.0",
     "webpack": "^5.94.0",
