--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "newrelic-video-shaka",
-  "version": "0.3.0",
+  "version": "3.0.0",
   "description": "New relic tracker for shaka player",
   "main": "src/index.js",
   "scripts": {
@@ -22,7 +22,7 @@
   "license": "MIT",
   "dependencies": {
     "codem-isoboxer": "^0.3.10",
-    "newrelic-video-core": "github:newrelic/video-core-js#develop"
+    "newrelic-video-core": "github:newrelic/video-core-js#stable"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
