fix: Updated use-shared-publish.yml file

--- a/.github/workflows/use-shared-publish.yml
+++ b/.github/workflows/use-shared-publish.yml
@@ -16,3 +16,7 @@ jobs:
       publish-to-npm: true
       s3-path: 'media-agents/browser/shaka'
       file-to-upload: 'dist/umd/shaka.min.js'
+    secrets:
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }} 
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} 
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_S3_SECRET }} 
