fix: Updated umd file name for shaka

--- a/.github/workflows/use-shared-publish.yml
+++ b/.github/workflows/use-shared-publish.yml
@@ -14,7 +14,7 @@ jobs:
     with:
       node-version: 'lts/*'
       s3-path: 'media-agents/browser/shaka'
-      file-to-upload: 'dist/umd/shaka.min.js'
+      file-to-upload: 'dist/umd/newrelic-video-shaka.min.js'
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }} 
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }} 
