--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "newrelic-video-shaka",
-  "version": "3.0.1",
+  "name": "@newrelic/video-shaka",
+  "version": "3.1.0",
   "description": "New relic tracker for shaka player",
-  "main": "src/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test": "jest --coverage",
     "build": "webpack --mode production",
@@ -12,7 +13,8 @@
     "prezip": "npm run build",
     "zip": "zip -P newrelic -x '*.DS_Store' -r shaka.zip dist samples README.md CHANGELOG.md EULA.md",
     "clean": "rm -rf dist *.zip",
-    "deploy": "node scripts/deploy.js"
+    "deploy": "node scripts/deploy.js",
+    "third-party-updates": "oss third-party manifest --includeOptDeps && oss third-party notices --includeOptDeps && git add THIRD_PARTY_NOTICES.md third_party_manifest.json"
   },
   "repository": {
     "type": "git",
@@ -21,19 +23,31 @@
   "author": "Jordi Aguilar",
   "license": "MIT",
   "dependencies": {
-    "codem-isoboxer": "^0.3.10",
-    "newrelic-video-core": "github:newrelic/video-core-js#stable"
+    "@newrelic/video-core": "^3.1.0",
+    "codem-isoboxer": "^0.3.10"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
     "@babel/plugin-transform-modules-commonjs": "^7.24.8",
     "@babel/preset-env": "^7.0.0",
+    "@newrelic/newrelic-oss-cli": "^0.1.2",
     "aws-sdk": "^2.920.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^8.0.0",
     "jest": "^29.7.0",
     "videojs-ima": "^0.6.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-obfuscator": "^3.5.1"
+  },
+  "files": [
+    "THIRD_PARTY_NOTICES.md",
+    "dist",
+    "CHANGELOG.md",
+    "README.md",
+    "!test"
+  ],
+  "publishConfig": {
+    "access": "public"
   }
 }
