--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newrelic/video-shaka",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "New relic tracker for shaka player",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -23,7 +23,7 @@
   "author": "Jordi Aguilar",
   "license": "MIT",
   "dependencies": {
-    "@newrelic/video-core": "^3.1.0",
+    "@newrelic/video-core": "/Users/cmalay/Desktop/malay/standalone/video-shaka-js/newrelic-video-core-3.1.1.tgz",
     "codem-isoboxer": "^0.3.10"
   },
   "devDependencies": {
@@ -37,8 +37,7 @@
     "jest": "^29.7.0",
     "videojs-ima": "^0.6.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-obfuscator": "^3.5.1"
+    "webpack-cli": "^5.1.4"
   },
   "files": [
     "THIRD_PARTY_NOTICES.md",
