--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@newrelic/video-shaka",
-  "version": "3.1.0",
+  "version": "4.0.0",
   "description": "New relic tracker for shaka player",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -21,9 +21,9 @@
     "url": "https://github.com/newrelic/video-shaka-js.git"
   },
   "author": "Jordi Aguilar",
-  "license": "MIT",
+  "license": "Apache-2.0",
   "dependencies": {
-    "@newrelic/video-core": "^3.1.0",
+    "@newrelic/video-core": "^4.0.0",
     "codem-isoboxer": "^0.3.10"
   },
   "devDependencies": {
@@ -37,12 +37,13 @@
     "jest": "^29.7.0",
     "videojs-ima": "^0.6.0",
     "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-obfuscator": "^3.5.1"
+    "webpack-cli": "^5.1.4"
   },
   "files": [
     "THIRD_PARTY_NOTICES.md",
     "dist",
+    "src",
+    "LICENSE",
     "CHANGELOG.md",
     "README.md",
     "!test"
