chore: Implement shared mock infrastructure and achieved unit coverage more than 90%

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "author": "Jordi Aguilar",
   "license": "Apache-2.0",
   "dependencies": {
-    "@newrelic/video-core": "^4.0.0",
+    "@newrelic/video-core": "~4.0.2",
     "codem-isoboxer": "^0.3.10"
   },
   "devDependencies": {
